'publication from pim@ojs+linux+5.15.49+quiqr-desktop-app-0.13.6'

--- a/themes/Paper/layouts/partials/footer.html
+++ b/themes/Paper/layouts/partials/footer.html
@@ -2,6 +2,6 @@
   <p>&copy; {{ now.Year }} <a href="{{ `` | absURL }}">{{ site.Title }}</a></p>
   <p>Powered by <a href="https://gohugo.io/" rel="noopener" target="_blank">Hugo️️</a>️</p>
   <p>
-    <a href="https://github.com/nanxiaobei/hugo-paper" rel="noopener" target="_blank">Paper 5.1</a>
+    <a href="https://github.com/mipmip/quiqr-paper-themed-template" rel="noopener" target="_blank">Paper</a>
   </p>
 </footer>
