--- a/themes/Paper/layouts/partials/head.html
+++ b/themes/Paper/layouts/partials/head.html
@@ -13,6 +13,7 @@
   {{ else }}
   <meta name="description" content="{{ site.Params.description }}" />
   <meta name="author" content="{{ site.Author.name }}" />
+  <script async defer data-website-id="f18fefcf-890b-4183-b4ce-362ec471e1a5" src="https://umami.poppygo.io/umami.js"></script>
   {{ end }}
 
   <!-- Styles & Scripts -->
