'push by pim@ojs+linux+5.15.119+quiqr-desktop-app-0.17.14'

--- a/themes/bexer-hugo/layouts/partials/head.html
+++ b/themes/bexer-hugo/layouts/partials/head.html
@@ -25,6 +25,8 @@
 <!-- theme color meta -->
 {{with site.Params.variables.primary_color}}<meta name="theme-color" content="{{.}}">{{end}}
 
+<script async src="https://umami.breeders.node.snel.city/script.js" data-website-id="69431827-fb74-40cb-9fdd-17ffb4065fbc"></script>
+
 {{ with .Params.image }}
 <meta property="og:image" content="{{ . | absURL }}">
 {{ end }}
