--- a/themes/bexer-hugo/layouts/partials/head.html
+++ b/themes/bexer-hugo/layouts/partials/head.html
@@ -25,7 +25,7 @@
 <!-- theme color meta -->
 {{with site.Params.variables.primary_color}}<meta name="theme-color" content="{{.}}">{{end}}
 
-<script async src="https://umami.breeders.node.snel.city/script.js" data-website-id="69431827-fb74-40cb-9fdd-17ffb4065fbc"></script>
+<script async src="https://umami.pimsnel.com/script.js" data-website-id="2d77eb6a-ff7e-41cd-9262-758fe2e5d6a1"></script>
 
 {{ with .Params.image }}
 <meta property="og:image" content="{{ . | absURL }}">
