--- a/themes/bexer-hugo/layouts/partials/footer.html
+++ b/themes/bexer-hugo/layouts/partials/footer.html
@@ -81,3 +81,6 @@
   </div>
 </footer>
 <!-- /footer -->
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+
